--- a/src/app/upload-author/upload-author.component.html
+++ b/src/app/upload-author/upload-author.component.html
@@ -5,7 +5,7 @@
       <label for="file">Select Excel File:</label>
       <input type="file" id="file" (change)="onFileChange($event)" accept=".xlsx, .xls" />
     </div>
-    <button type="submit" class="btn btn-primary">Upload Author data</button>
+    <button type="submit" class="btn btn-primary">Upload Author Data</button>
   </form>
 
   <div *ngIf="tableData.length">
