--- a/src/app/upload-books/upload-books.component.html
+++ b/src/app/upload-books/upload-books.component.html
@@ -8,7 +8,7 @@
     <button type="submit" class="btn btn-primary">Upload Books Data</button>
   </form>
 
-  <div *ngIf="tableData.length">
+  <div *ngIf="bookData.length">
     <h3>Preview Data</h3>
     <table class="table table-striped">
       <thead>
@@ -19,7 +19,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let row of tableData">
+        <tr *ngFor="let row of bookData">
           <td>{{ row.bookName }}</td>
           <td>{{ row.isbn }}</td>
           <td>{{ row.authorID }}</td>
